--- a/newfile/src/App.css
+++ b/newfile/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+
+
+.container {
+  padding: 15px 10px;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container_image {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  max-width: 25%;
+  max-height: 25%;
+ 
+ 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.contentBox {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-basis: 50%;
+  
 }
 
-.App-link {
-  color: #61dafb;
+
+
+.content {
+  padding-bottom: 10px;
+  padding: 2%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.author {
+  font-family: Arial, Helvetica, sans-serif;
+  
+
+}
+
+.title {
+  font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.description {
+  font-family: Arial, Helvetica, sans-serif;
+  
+
+}
+
+.container_text {
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 2%;
+  
 }
